--- a/broadcast/Cargo.toml
+++ b/broadcast/Cargo.toml
@@ -10,3 +10,8 @@ maelstrom-node = "0.1.6"
 async-trait = "0.1.68"
 serde_json = "1.0.96"
 serde = "1.0.162"
+tokio-context = "0.1.3"
+tokio = "1.28.1"
+crossbeam-queue = "0.3.8"
+tracing = "0.1.37"
+tracing-subscriber = { version = "0.3.17", features = ["json"] }
